adjustment for mobile nav menu - spacing fixes to fit nav items inside container

--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -136,7 +136,7 @@
 
     #main-nav {
         .img {
-            margin: 1rem;
+            margin: .5rem;
         }
 
         .social {
@@ -144,7 +144,7 @@
         }
 
         h1 {
-            margin: 1rem 0;
+            margin: .5rem 0;
             font-size: 1.8rem;
         }
 
@@ -171,5 +171,14 @@
             }
         }
     }
+
+    
 }
+
+
+//Min-Widths
+
+
+
+
 
